[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Guide.tscn" type="PackedScene" id=1]
[ext_resource path="res://Items/ItemDrop.tscn" type="PackedScene" id=2]
[ext_resource path="res://bosses/GoblinKing/GoblinKing.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=6]
[ext_resource path="res://scenes/ParallaxBackground.tscn" type="PackedScene" id=7]
[ext_resource path="res://Worldgen/ChunkManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/World.gd" type="Script" id=13]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=17]

[sub_resource type="CanvasItemMaterial" id=9]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="Animation" id=3]
resource_name = "DayNight_cycle"
length = 44.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DayNightCycleForeground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 16.1, 24, 32, 40, 44, 281, 481.3, 731.5, 781.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.858824, 0.847059, 0.847059, 1 ), Color( 1, 1, 1, 1 ), Color( 0.682353, 0.670588, 0.462745, 1 ), Color( 0.254902, 0.372549, 0.556863, 1 ), Color( 0.0823529, 0.121569, 0.227451, 1 ), Color( 1, 1, 1, 1 ), Color( 0.784314, 0.752941, 0.27451, 1 ), Color( 0.160784, 0.184314, 0.470588, 1 ), Color( 0.133333, 0.235294, 0.447059, 1 ), Color( 0.85098, 0.87451, 0.92549, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DayNightCycleForeground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.858824, 0.847059, 0.847059, 1 ) ]
}

[node name="World" type="Node2D"]
script = ExtResource( 13 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 7 )]

[node name="DayNightCycleForeground" type="CanvasModulate" parent="."]
color = Color( 0.858824, 0.847059, 0.847059, 1 )

[node name="player" parent="DayNightCycleForeground" instance=ExtResource( 5 )]
material = SubResource( 9 )
position = Vector2( 1033, -545 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" parent="DayNightCycleForeground/player" index="0"]
material = SubResource( 5 )

[node name="Camera2D" parent="DayNightCycleForeground/player" index="2"]
script = ExtResource( 6 )

[node name="PlayerLight" parent="DayNightCycleForeground/player" index="3"]
texture_scale = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DayNight_cycle = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 17 )]

[node name="ChunkManager" parent="." instance=ExtResource( 8 )]

[node name="Guide" parent="." instance=ExtResource( 1 )]
position = Vector2( 1442, -690 )

[node name="GoblinKing" parent="." instance=ExtResource( 3 )]
position = Vector2( 302, -832 )

[node name="ItemDrops_#test" type="Node2D" parent="."]
position = Vector2( 49, -325 )
__meta__ = {
"_edit_group_": true
}

[node name="ItemDrop" parent="ItemDrops_#test" instance=ExtResource( 2 )]
position = Vector2( 1388, -387 )
collision_layer = 16
collision_mask = 17

[node name="ItemDrop2" parent="ItemDrops_#test" instance=ExtResource( 2 )]
position = Vector2( 1342, -381 )
collision_layer = 16
collision_mask = 17

[node name="ItemDrop3" parent="ItemDrops_#test" instance=ExtResource( 2 )]
position = Vector2( 687, -366 )
collision_layer = 16
collision_mask = 17

[node name="ItemDrop4" parent="ItemDrops_#test" instance=ExtResource( 2 )]
position = Vector2( 781, -382 )
collision_layer = 16
collision_mask = 17

[node name="ItemDrop5" parent="ItemDrops_#test" instance=ExtResource( 2 )]
position = Vector2( 862, -385 )
collision_layer = 16
collision_mask = 17

[node name="ItemDrop6" parent="ItemDrops_#test" instance=ExtResource( 2 )]
position = Vector2( 1454, -381 )
collision_layer = 16
collision_mask = 17

[node name="ItemDrop7" parent="ItemDrops_#test" instance=ExtResource( 2 )]
position = Vector2( 1160, -402 )
collision_layer = 16
collision_mask = 17

[editable path="DayNightCycleForeground/player"]
